Fix navigation bar
The `header` element has an `overflow: hidden` property set which
prevents the language/version dropdown menu from properly show up on
Safari. When removing that `overflow: hidden;` style setting, we found
that there are very old contents which is currently invisible on all
pages due to the `overflow: hidden;` setting.

This PR removes the `overflow: hidden;` property and also kills the
invisible content in the 'header' to make sure we have a cleaner
'header' for all pages.

Tested on Safari, Firefox and Chrome.

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -105,11 +105,11 @@ header
   left: 0
   width: 100%
   z-index: 8888
-  background-color: transparent
+  // background-color: transparent
   box-shadow: 0 0 0 transparent
   transition: 0.3s
   text-align: center
-  overflow: hidden
+  // overflow: hidden
 
 
 .logo
